<resources>
    <string name="app_name">UnscrambleGame</string>
    <string name="app_title">Unscramble</string>
    <string name="rule_of_the_game">Unscramble the world using all the letters.</string>
    <string name="hint_input">Enter your word</string>
    <string name="submit">Submit</string>
    <string name="skip">Skip</string>
    <string name="score">Score: %d</string>
    <string name="error_message">wrong guess</string>
    <string name="restart">Restart</string>
    <string name="game_over">Game over</string>
    <string name="retry">Retry</string>
</resources>