<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/common_screen_margin_32dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Space style="@style/CustomSpaceStyle" />

    <TextView
        android:id="@+id/titleTextView"
        style="@style/CustomTextView"
        android:text="@string/app_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="@dimen/title_text_size" />

    <LinearLayout
        android:id="@+id/cardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_rounded_grey"
        android:orientation="vertical"
        android:padding="@dimen/common_layout_padding">

        <TextView
            android:id="@+id/progressTextView"
            style="@style/CustomBackGroundTextView"
            android:layout_gravity="end"
            android:background="@drawable/shape_rounded_blue"
            android:text="1/10"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/questionTextView"
            style="@style/CustomTextView"
            android:layout_marginTop="@dimen/common_view_margin_top"
            android:text="animal"
            android:textColor="@color/black"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:id="@+id/ruleTextView"
            style="@style/CustomTextView"
            android:layout_marginTop="@dimen/common_view_margin_top"
            android:text="@string/rule_of_the_game"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text_size" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_view_margin_top"
            android:hint="@string/hint_input"
            app:boxBackgroundColor="@color/light_grey"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_view_margin_top"
        android:text="@string/submit" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/skipButton"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/shape_rounded_button"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="@color/blue" />

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_rounded_grey"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:padding="8dp"
        android:text="Score: 0"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <Space style="@style/CustomSpaceStyle" />

</LinearLayout>